<resources>

    <string name="app_name">Activity Logger</string>

    Universal strings
    <string name="selectedDate">Date: </string>
    <string name="saveActivityToList">Save this activity</string>
    <string name="additionalNotes">Additional notes</string>
    <string name="activitySaved">Activity saved</string>
    <string name="savedWarning">If you leave without saving, the activity will be deleted</string>

    Button strings
    <string name="backButton">Back</string>
    <string name="saveButton">Save</string>
    <string name="deleteButton">Delete</string>
    <string name="continueButton">Continue</string>
    <string name="confirmButton">Confirm</string>

    MainActivity strings
    <string name="chooseDayText">Hi! Choose a day you want to edit:</string>
    <string name="analyzeAllButton">Analyze data from all days</string>
    <string name="analyzeChosenButton">Analyze data from chosen day</string>
    <string name="analyzeTextBox">Analyze data:</string>

    DayScreen strings
    <string name="rateDayText">Rate this day:</string>
    <string name="socialTimeText">Social time (h):</string>
    <string name="SleepTimeText">Sleep:</string>
    <string name="newexperienceBoxText">New Experience</string>
    <string name="exerciseBoxText">Exercise</string>
    <string name="newpeopleBoxText">New people</string>
    <string name="saveDayButton">Save the day</string>

    ActivityScreen strings
    <string name="rateActivityText">Rate this activity:</string>
    <string name="chosenActivityText">Chosen activity:</string>
    <string name="activityTimeText">Time(h):</string>
    <string name="activityScreenInfoMessage">Select activity from the dropdown menu above</string>

    Study strings
    <string name="subjectText">Study subject:</string>
    <string name="friendsYesNo">With friends?</string>
    <string name="subjectInput">Subject</string>

    Drinking strings
    <string name="dosesText">Number of doses:</string>
    <string name="dosesInput">Doses</string>
    <string name="passedOut">Passed out?</string>

    Exercise strings
    <string name="sportType">Type of sports:</string>
    <string name="sportsInput">Sports</string>
    <string name="typeOfSports">What sports did you do?</string>

    Friends strings
    <string name="friendText">Number of friends:</string>
    <string name="friendInput">Amount</string>
    <string name="friendsText">What did you do with friends?</string>

    Relationship strings
    <string name="relShipActivity">Relationship activity:</string>
    <string name="hadSextext">Had sex</string>

    AnalyzeAll strings
    <string name="avgDayRating">Average day rating:</string>
    <string name="avgSleepTme">Average sleep time:</string>
    <string name="avgSocialTime">Average social time:</string>
    <string name="newExpText">Days of new acquired experience:</string>
    <string name="newPplText">Days of new people met:</string>
    <string name="exercisedText">Days when exercised:</string>
    <string name="firstDayOfUsage">First logged day:</string>
    <string name="totalUsageDays">Total days used:</string>
    <string name="totalLoggedDays">Total logged days:</string>

    Analyze selected strings
    <string name="ratingOfTheDay">Rating:</string>
    <string name="sleepHours">Sleep:</string>
    <string name="socialHours">Social time:</string>
    <string name="newExp">New exp:</string>
    <string name="newPeople">New people:</string>
    <string name="exercise">Exercised:</string>


    <string-array name="activities">
        <item> </item>
        <item>Studying</item>
        <item>Exercise</item>
        <item>Drinking</item>
        <item>Friends</item>
        <item>Relationship</item>
    </string-array>

    <string-array name="subjects">
        <item> </item>
        <item>Math</item>
        <item>Physics</item>
        <item>Programming</item>
        <item>Other</item>
    </string-array>

    <string-array name="exerciseTypes">
        <item> </item>
        <item>Powerlifting</item>
        <item>Jogging</item>
        <item>Cycling</item>
        <item>HIIT</item>
        <item>Other</item>
    </string-array>

    <string-array name="activityWithFriends">
        <item> </item>
        <item>Drinking</item>
        <item>Studying</item>
        <item>Relaxing</item>
        <item>Cottage</item>
        <item>Other activity</item>
    </string-array>

    <string-array name="relationshipActivity">
        <item> </item>
        <item>Her place</item>
        <item>My place</item>
        <item>Restaurant</item>
        <item>Bar</item>
        <item>Cafe</item>
        <item>Movie</item>
        <item>Hangout</item>
        <item>Outdoors</item>
        <item>Other activity</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
