<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalyzeChosenScreen">

    <TextView
        android:id="@+id/dateTextBox"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/selectedDate"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/dateTextBox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="98dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/ratingOfTheDay"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextBox" />

    <TextView
        android:id="@+id/social"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/socialHours"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepTime" />

    <TextView
        android:id="@+id/experience"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/newExp"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social" />

    <TextView
        android:id="@+id/people"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/newPeople"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experience" />

    <TextView
        android:id="@+id/exercise"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/exercise"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people" />

    <TextView
        android:id="@+id/sleepTime"
        android:layout_width="98dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sleepHours"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <TextView
        android:id="@+id/dayRating"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/socialTime"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toEndOf="@+id/social"
        app:layout_constraintTop_toBottomOf="@+id/sleep" />

    <TextView
        android:id="@+id/exerc"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/exercise"
        app:layout_constraintTop_toBottomOf="@+id/ppl" />

    <TextView
        android:id="@+id/ppl"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/people"
        app:layout_constraintTop_toBottomOf="@+id/exp" />

    <TextView
        android:id="@+id/exp"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/experience"
        app:layout_constraintTop_toBottomOf="@+id/socialTime" />

    <TextView
        android:id="@+id/sleep"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toEndOf="@+id/sleepTime"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <TextView
        android:id="@+id/activityText"
        android:layout_width="379dp"
        android:layout_height="121dp"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="goBack"
        android:text="@string/backButton"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityText" />
</androidx.constraintlayout.widget.ConstraintLayout>